# xdsl-torch

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  example.py  main.py  pyproject.toml
.github/workflows/: ci-core.yml  code-formatting.yml
tests/: test_dummy.py  test_import.py  test_mappings.py
tests/filecheck/: .lit_test_times.txt  arguments.py  dummy.mlir  lit.cfg  ops.mlir  outputs.py  roundtrip.py
tests/torchvision/: model.py
xdsl_torch/dialects/: __init__.py  torch.py  torch_dialect.py  torch_generated.py  torch_generated_ops.py  torch_mapping.py  torch_mapping_generated.py  torch_ops.py  torch_ops_generated.py  types.py
xdsl_torch/tools/: gen_torch_dialect.py  xdsl_torch_opt.py
xdsl_torch/utils/: export_program.py  import_program.py  type_mapping.py
