[project]
name = "xdsl_torch"
version = "0.1.0"
description = "Use xDSL for custom compiler rewrites in PyTorch."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["torch>=2.6.0", "xdsl>=0.29.0"]

[project.scripts]
xdsl-torch-opt = "xdsl_torch.tools.xdsl_torch_opt:main"

[project.optional-dependencies]
dev = [
    "pyright==1.1.396",
    "lit<19.0.0",
    "pytest<8.4",
    "filecheck==1.0.1",
    "pre-commit==4.0.1",
    "psutil==6.1.0",
]

[dependency-groups]
dev = ["xdsl_torch[dev]"]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pyright]
reportImportCycles = false
typeCheckingMode = "strict"
include = ["xdsl_torch"]

[tool.ruff]
target-version = "py310"
extend-include = ["*.ipynb", "*.pyi"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "PT", "TID251"]
ignore = [
    "E741",  # https://beta.ruff.rs/docs/rules/ambiguous-variable-name/
    "PT006", # https://beta.ruff.rs/docs/rules/pytest-parametrize-names-wrong-type/
    "PT011", # https://beta.ruff.rs/docs/rules/pytest-raises-too-broad/
    "PT012", # https://beta.ruff.rs/docs/rules/pytest-raises-with-multiple-statements/
]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"xdsl.dialects.utils.fast_math".msg = "Use xdsl.dialects.utils instead"
"xdsl.dialects.utils.format".msg = "Use xdsl.dialects.utils instead"
"xdsl.ir.affine.affine_expr".msg = "Use xdsl.ir.affine instead"
"xdsl.ir.affine.affine_map".msg = "Use xdsl.ir.affine instead"
"xdsl.ir.affine.affine_set".msg = "Use xdsl.ir.affine instead"
"xdsl.ir.core".msg = "Use xdsl.ir instead."
"xdsl.irdl.attributes".msg = "Use xdsl.irdl instead"
"xdsl.irdl.common".msg = "Use xdsl.irdl instead"
"xdsl.irdl.constraints".msg = "Use xdsl.irdl instead"
"xdsl.irdl.operations".msg = "Use xdsl.irdl instead"
"xdsl.parser.affine_parser".msg = "Use xdsl.parser instead."
"xdsl.parser.attribute_parser".msg = "Use xdsl.parser instead."
"xdsl.parser.core".msg = "Use xdsl.parser instead."

[tool.pytest.ini_options]
python_files = ["tests/*test_*.py", "docs/*test_*.py"]
python_classes = "Test_*"
python_functions = "test_*"
addopts = ["--durations=20", "--maxfail=5"]
