[project]
name = "xdsl_torch"
version = "0.1.0"
description = "Use xDSL for custom compiler rewrites in PyTorch."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.4",
    "torch>=2.6.0",
    "xdsl>=0.29.0",
]

[project.scripts]
xdsl-torch-opt = "xdsl_torch.tools.xdsl_torch_opt:main"

[project.optional-dependencies]
dev = [
    "pyright==1.1.396",
    "lit<19.0.0",
    "pytest<8.4",
    "filecheck==1.0.1",
    "pre-commit==4.0.1",
    "psutil==6.1.0",
]

[dependency-groups]
dev = ["xdsl_torch[dev]"]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pyright]
reportImportCycles = false
typeCheckingMode = "strict"
include = ["xdsl_torch"]
"ignore" = [
    "xdsl_torch/dialects/torch_mapping.py"
]

[tool.ruff]
target-version = "py310"
extend-include = ["*.ipynb", "*.pyi"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "PT", "TID251"]
ignore = [
    "E741",  # https://beta.ruff.rs/docs/rules/ambiguous-variable-name/
    "PT006", # https://beta.ruff.rs/docs/rules/pytest-parametrize-names-wrong-type/
    "PT011", # https://beta.ruff.rs/docs/rules/pytest-raises-too-broad/
    "PT012", # https://beta.ruff.rs/docs/rules/pytest-raises-with-multiple-statements/
]

[tool.ruff.lint.per-file-ignores]
"**/filecheck/*" = ["F811", "F841", "E501"]
"**/torch_mapping.py" = ["ALL"]

[tool.pytest.ini_options]
python_files = ["tests/*test_*.py", "docs/*test_*.py"]
python_classes = "Test_*"
python_functions = "test_*"
addopts = ["--durations=20", "--maxfail=5"]
